// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fragment/Role/ActionForm will overide local data when in update mode 1`] = `
Object {
  "form": Object {
    "name": "Role name has been update",
    "privileges": Array [],
  },
}
`;

exports[`fragment/Role/ActionForm will post data on failed and bring up an alert 1`] = `
<body>
  
  
  <div
    id="app"
  >
    

    <div
      data-v-app=""
      id="ss-alert_55511490411614833185505"
      role="alert"
    >
      <div
        class="ss-alert ss-alert--success fade-slide-enter-from fade-slide-enter-active"
      >
        <div
          class="ss-alert--wrapper"
        >
          <div
            class="ss-alert--close"
          >
            <svg
              class=""
              viewBox="0 0 352 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="ss-alert--content"
          >
            cms.role.create.success
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`fragment/Role/ActionForm will post data on success and bring up an alert then redirect it to the list 1`] = `
<body>
  
  
  <div
    id="app"
  >
    

    <div
      data-v-app=""
      id="ss-alert_55511490411614833185505"
      role="alert"
    >
      <div
        class="ss-alert ss-alert--success fade-slide-enter-from fade-slide-enter-active"
      >
        <div
          class="ss-alert--wrapper"
        >
          <div
            class="ss-alert--close"
          >
            <svg
              class=""
              viewBox="0 0 352 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="ss-alert--content"
          >
            cms.role.create.success
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`fragment/Role/ActionForm will render and match snapshot 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Role Name
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        autofocus=""
        class="ss-control--input"
      >
        <!--v-if-->
        <input
          autocomplete="off"
          autofocus=""
          class="ss-input"
          id="input-4-undefined"
          placeholder="Role Name"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Previleges
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        class="ss-control--checkbox ck-button ck-dark"
      >
        
        
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <!---->
    <div
      class="ss-form-control--wrapper col-3"
    >
      <button
        class="ss-button ss-button--dark ss-button--base text-bold"
        type="submit"
      >
        <div
          class="ss-button--wrapper"
        >
          
          <div
            class="ss-button--icon"
          >
            <svg
              class=""
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          
          <div
            class="ss-button--label has-icon"
          >
            
            Create
            
          </div>
          
        </div>
      </button>
      <!---->
    </div>
  </div>
  
</form>
`;

exports[`fragment/Role/ActionForm will render the spinner during the request process 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Role Name
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        autofocus=""
        class="ss-control--input"
      >
        <!--v-if-->
        <input
          autocomplete="off"
          autofocus=""
          class="ss-input"
          id="input-63-undefined"
          placeholder="Role Name"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Previleges
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        class="ss-control--checkbox ck-button ck-dark"
      >
        
        
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <!---->
    <div
      class="ss-form-control--wrapper col-3"
    >
      <button
        class="ss-button ss-button--dark ss-button--base text-bold"
        disabled=""
        type="submit"
      >
        <div
          class="ss-button--wrapper"
        >
          
          <!--v-if-->
          
          
          <div
            class="ss-button--spinner"
          >
            <div
              class="ss-spinner"
              style="width: 20px; height: 20px;"
            >
              <div />
              <div />
              <div />
            </div>
          </div>
          
        </div>
      </button>
      <!---->
    </div>
  </div>
  
</form>
`;

exports[`fragment/Role/ActionForm will render the text and color for the form update 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Role Name
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        autofocus=""
        class="ss-control--input"
      >
        <!--v-if-->
        <input
          autocomplete="off"
          autofocus=""
          class="ss-input"
          id="input-73-undefined"
          placeholder="Role Name"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <div
      class="ss-form-control--label"
    >
      Previleges
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        class="ss-control--checkbox ck-button ck-dark"
      >
        
        
      </div>
      <!---->
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <!---->
    <div
      class="ss-form-control--wrapper col-3"
    >
      <button
        class="ss-button ss-button--warning ss-button--base text-bold"
        type="submit"
      >
        <div
          class="ss-button--wrapper"
        >
          
          <div
            class="ss-button--icon"
          >
            <svg
              class=""
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          
          <div
            class="ss-button--label has-icon"
          >
            
            Update
            
          </div>
          
        </div>
      </button>
      <!---->
    </div>
  </div>
  
</form>
`;

exports[`fragment/Role/ActionForm will render with error validation on all fields and match snapshot 1`] = `
<form
  class="ss-form"
>
  
  <div
    class="ss-form-control has-feedback"
  >
    <div
      class="ss-form-control--label"
    >
      Role Name
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        autofocus=""
        class="ss-control--input"
      >
        <!--v-if-->
        <input
          autocomplete="off"
          autofocus=""
          class="ss-input"
          id="input-17-undefined"
          placeholder="Role Name"
          type="text"
        />
        <!--v-if-->
        <!--v-if-->
      </div>
      <div
        class="ss-control--info slide-top-enter-from slide-top-enter-active"
      >
        Role name is required
      </div>
    </div>
  </div>
  <div
    class="ss-form-control has-feedback"
  >
    <div
      class="ss-form-control--label"
    >
      Previleges
    </div>
    <div
      class="ss-form-control--wrapper"
    >
      <div
        class="ss-control--checkbox ck-button ck-dark"
      >
        
        
      </div>
      <div
        class="ss-control--info slide-top-enter-from slide-top-enter-active"
      >
        Privileges is required
      </div>
    </div>
  </div>
  <div
    class="ss-form-control"
  >
    <!---->
    <div
      class="ss-form-control--wrapper col-3"
    >
      <button
        class="ss-button ss-button--dark ss-button--base text-bold"
        type="submit"
      >
        <div
          class="ss-button--wrapper"
        >
          
          <div
            class="ss-button--icon"
          >
            <svg
              class=""
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M433.941 129.941l-83.882-83.882A48 48 0 0 0 316.118 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V163.882a48 48 0 0 0-14.059-33.941zM224 416c-35.346 0-64-28.654-64-64 0-35.346 28.654-64 64-64s64 28.654 64 64c0 35.346-28.654 64-64 64zm96-304.52V212c0 6.627-5.373 12-12 12H76c-6.627 0-12-5.373-12-12V108c0-6.627 5.373-12 12-12h228.52c3.183 0 6.235 1.264 8.485 3.515l3.48 3.48A11.996 11.996 0 0 1 320 111.48z"
                fill="currentColor"
              />
            </svg>
          </div>
          
          
          <div
            class="ss-button--label has-icon"
          >
            
            Create
            
          </div>
          
        </div>
      </button>
      <!---->
    </div>
  </div>
  
</form>
`;
